=== 1.4.0 ===

2007-07-12  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Makefile.am: hacky workaround to get distcheck to pass

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS: Update NEWS for release
	* configure.in: bump version for release

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc: add ability to use dynamic casting with the return
	values from more functions, including:
		Context::get_target()
		Context::get_target() const
		Context::get_source()
		Context::get_source() const
		Context::get_group_target()
		Context::get_group_target() const
		Context::pop_group()
	* tests/test-context.cc: a few additional tests to verify the const /
	non-const versions both work with dynamic casting.

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/cairomm.css: Improve the documentation style a little bit
	to make it more readable
	* docs/reference/Doxyfile.in: build the reference doc for the new
	QuartzSurface class

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h: add alternate API for set_dash() which takes a
	std::vector argument instead of the slightly unexpected std::valarray
	argument
	* tests/test-context.cc: test that both API work correctly and compile
	correctly without any problems

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* tests/test-context.cc: add some tests for matrix transformations and
	user-to-device coordinate mappings.  The matrix transformation 'test' does
	nothing more than call the functions to excercise them a bit, but it's
	causing an unexpected exception to be triggered when calling
	Context::set_matrix().  The odd thing is that exception.what() results in
	'success' being printed.  This requires further investigation
	Also used BOOST_CHECK_EQUAL in most places instead of BOOST_CHECK to get
	more meaningful failure messages.

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>
